--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -2,6 +2,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: App\Entity\User
+    registration:
+        form:
+            type: App\Form\RegistrationType
     from_email:
         address: "user@email.com"
         sender_name: "Sender Name"
